# fastapi-rag-doc-chatbot

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: __init__.py  config.py  dependencies.py  main.py
app/api/: conversation.py  ingestion.py
app/db/: session.py
app/models/: __init__.py  booking.py  document.py
app/schemas/: booking.py  conversation.py  ingestion.py
app/services/: booking_service.py  chat_memory.py  chunking.py  embedding.py  rag_pipeline.py  text_extractor.py  vector_store.py
tests/: __init__.py  conftest.py  test_chunking.py  test_conversation.py  test_ingestion.py
